Delete padding to avoid extra space

--- a/css/event.css
+++ b/css/event.css
@@ -1,6 +1,6 @@
 
     body {
-		padding: 60px 0px;
+		/*padding: 60px 0px;*/
 		background-color: rgb(220, 220, 220);
 	}
     
